--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "html-webpack-plugin": "5.5.0",
     "jest": "28.1.3",
     "msw": "0.45.0",
-    "nodemon": "2.0.19",
-    "webpack": "5.74.0",
+    "nodemon": "^3.0.1",
+    "webpack": "^5.89.0",
     "webpack-dev-server": "4.10.0"
   },
   "dependencies": {
@@ -38,12 +38,14 @@
     "cors": "2.8.5",
     "css-loader": "6.7.1",
     "express": "4.18.1",
+    "from": "^0.1.7",
     "jest-dom": "4.0.0",
     "moment": "2.29.4",
     "mutationobserver-shim": "0.3.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "^6.17.0",
+    "redirect": "^0.2.0",
     "style-loader": "3.3.1",
     "styled-components": "5.3.5",
     "webpack-cli": "4.10.0"
